NetBSD Problem Report #49107

From www@NetBSD.org  Wed Aug 13 04:45:36 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C3D14ACFE1
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 13 Aug 2014 04:45:35 +0000 (UTC)
Message-Id: <20140813044534.5D313ACFE7@mollari.NetBSD.org>
Date: Wed, 13 Aug 2014 04:45:34 +0000 (UTC)
From: jun@soum.co.jp
Reply-To: jun@soum.co.jp
To: gnats-bugs@NetBSD.org
Subject: hpcarm and ozaurus boot failed with  "*ptep == opte" failed
X-Send-Pr-Version: www-1.0

>Number:         49107
>Category:       port-arm
>Synopsis:       hpcarm and ozaurus boot failed with  "*ptep == opte" failed
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Aug 13 04:50:00 +0000 2014
>Closed-Date:    Fri Dec 12 05:22:07 +0000 2014
>Last-Modified:  Fri Dec 12 05:22:07 +0000 2014
>Originator:     Jun Ebihara
>Release:        current 201408052120Z
>Organization:
SOUM Corporation
>Environment:
Zaurus: SL-C860 & hpcarm: WS011SH

>Description:
http://mail-index.netbsd.org/port-arm/2014/08/08/msg002562.html

On NetBSD-current 201408052120Z:
hpcarm and ozaurus boot failed in same place.
// I cant get no boot message with ezaurus.

init: trying /sbin/init
panic: kernel diagnostic assertion "*ptep == opte" failed: file "./arm/arm32/pma
p.h", line 575 0xa7de505b [*0xc0012004] != 0
Stopped in pid 1,1 (init) at  netbsd:cpu_Debugger+0x4:   bx r14
db> bt
0xc776ed14: netbsd:vpanic+0xc
0xc776ed2c: netbsf:kern_assert+0x40
0xc776ed6c: netbsd:pmap_zero_page_xscale+0xcc
0xc776edbc: netbsd:uvm_pagealloc_strat+0x458
0xc776ee04: netbsd:uvmfault_promote+0x21c
0xc776ef34: netbsd:uvm_fault_internal+0xa5c
0xc776efac: netbsd:data_abort_handler+0x200


>How-To-Repeat:
These ports can boot on 6.99.29/30.

dmesg of zaurus: 6.99.29 (GENERIC) #3: Thu Jan 23 09:55:16 JST 2014
https://github.com/ebijun/NetBSD/blob/master/dmesg/zaurus/SL-C860

dmesg of hpcarm: 6.99.30 (WZERO3) #1: Fri Jan 31 11:34:23 JST 2014
https://github.com/ebijun/NetBSD/blob/master/dmesg/hpcarm/WS011SH

Boot failed on 201408052120Z.
>Fix:

>Release-Note:

>Audit-Trail:
From: "Matt Thomas" <matt@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49107 CVS commit: src/sys/arch/arm/arm32
Date: Wed, 13 Aug 2014 05:56:03 +0000

 Module Name:	src
 Committed By:	matt
 Date:		Wed Aug 13 05:56:03 UTC 2014

 Modified Files:
 	src/sys/arch/arm/arm32: pmap.c

 Log Message:
 Fix for PR/49107.
 Make sure pmap_copy_page_xscale clears the ptes afters its done with them.


 To generate a diff of this commit:
 cvs rdiff -u -r1.295 -r1.296 src/sys/arch/arm/arm32/pmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Jun Ebihara <jun@soum.co.jp>
To: gnats-bugs@NetBSD.org, matt@netbsd.org
Cc: port-arm-maintainer@netbsd.org, gnats-admin@netbsd.org,
        netbsd-bugs@netbsd.org
Subject: Re: PR/49107 CVS commit: src/sys/arch/arm/arm32
Date: Thu, 14 Aug 2014 10:07:54 +0900 (JST)

 Thanx matt!
 hpcarm and ozaurus can mount again.

 Please close this PR.

 From: "Matt Thomas" <matt@netbsd.org>
 Subject: PR/49107 CVS commit: src/sys/arch/arm/arm32
 Date: Wed, 13 Aug 2014 06:00:00 +0000 (UTC)

 > From: "Matt Thomas" <matt@netbsd.org>
 > Subject: PR/49107 CVS commit: src/sys/arch/arm/arm32
 > Date: Wed, 13 Aug 2014 05:56:03 +0000
 >  Modified Files:
 >  	src/sys/arch/arm/arm32: pmap.c
 >  Log Message:
 >  Fix for PR/49107.
 >  Make sure pmap_copy_page_xscale clears the ptes afters its done with them.

State-Changed-From-To: open->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Fri, 12 Dec 2014 05:22:07 +0000
State-Changed-Why:
Submiiter reported it was fixed.
Thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.