Fix for PR/49107. Make sure pmap_copy_page_xscale clears the ptes afters its done with them.